Port the core project to Fabric 1.21.11 with updated build setup, resources, and tests.